tests/src/frontend/typechecking/invalid/inherit_private.sk
fun main(): void {
  void
}
base class X {
  private fun foo(): void {
    void
  }
}

class Y() extends X {
  fun bar(): void {
    this.foo()
  }
}
